--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+:root
+  --primary: #007bff
+  --secondary: #6c757d
+  --success: #28a745
+  --info: #17a2b8
+  --warning: #ffc107
+  --danger: #dc3545
+  --light: #f8f9fa
+  --dark: #343a40
+
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap'
